[gd_scene load_steps=9 format=2]

[ext_resource path="res://Menus/Main/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Menus/Main/Title-Main.png" type="Texture" id=2]
[ext_resource path="res://Menus/Button-Normal.png" type="Texture" id=3]
[ext_resource path="res://Menus/Button-Hover.png" type="Texture" id=4]
[ext_resource path="res://Menus/Buttons-Icons.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 200, 0, 100, 100 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -301.0
margin_top = -700.0
margin_right = 301.0
rect_scale = Vector2( 0.9, 0.9 )
rect_pivot_offset = Vector2( 301, 320 )
custom_constants/separation = 0
alignment = 1

[node name="TitleMain" type="TextureRect" parent="VBoxContainer"]
margin_right = 602.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 300 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 300.0
margin_right = 602.0
margin_bottom = 700.0
custom_constants/separation = -50

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/VBoxContainer"]
margin_right = 602.0
margin_bottom = 250.0

[node name="PlayButton" type="TextureButton" parent="VBoxContainer/VBoxContainer/CenterContainer"]
margin_left = 192.0
margin_right = 410.0
margin_bottom = 250.0
rect_min_size = Vector2( 218, 250 )
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
texture_focused = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="PlayIcon" type="TextureRect" parent="VBoxContainer/VBoxContainer/CenterContainer/PlayButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
rect_scale = Vector2( 1.25, 1.25 )
rect_pivot_offset = Vector2( 50, 50 )
texture = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 200.0
margin_right = 602.0
margin_bottom = 400.0
custom_constants/separation = 250
alignment = 1

[node name="LevelsButton" type="TextureButton" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 176.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 88, 0 )
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
stretch_mode = 3

[node name="LevelsIcon" type="TextureRect" parent="VBoxContainer/VBoxContainer/HBoxContainer/LevelsButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
texture = SubResource( 2 )

[node name="HelpButton" type="TextureButton" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 426.0
margin_right = 602.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 88, 0 )
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
stretch_mode = 3

[node name="HelpIcon" type="TextureRect" parent="VBoxContainer/VBoxContainer/HBoxContainer/HelpButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
texture = SubResource( 3 )

[connection signal="visibility_changed" from="." to="." method="_on_MainMenu_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/CenterContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer/LevelsButton" to="." method="_on_LevelsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer/HelpButton" to="." method="_on_HelpButton_pressed"]
